feat: add transferTransactionAction endpoint
