# crates/rpc/src/server.rs
@@ -102,5 +102,14 @@ fn build_rpc_module(rpc: KoraRpc) -> Result<RpcModule<KoraRpc>, anyhow::Error> {
         },
     );
 
+    let _ = module.register_async_method(
+        "transferTransactionAction",
+        |rpc_params, rpc_context| async move {
+            let rpc = rpc_context.as_ref();
+            let params = rpc_params.parse()?;
+            rpc.transfer_transaction(params).await.map_err(Into::into)
+        },
+    );
+
     Ok(module)
 }
